--- a/proyecto/index.html
+++ b/proyecto/index.html
@@ -35,8 +35,9 @@
         <span class="navbar-toggler-icon"></span>
       </button>
 
-      <div class="collapse navbar-collapse" id="navbar-toggler">
-        <ul class="navbar-nav d-flex justify-content-center align-items-center">
+      <div class="collapse navbar-collapse" id="navbar-toggler justify-content-end">
+        
+        <ul class="navbar-nav d-flex">
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="#sobre-mi">Sobre mi</a>
           </li>
@@ -223,6 +224,7 @@
     <h3 class="seccion-descripcion">Estos son algunos testimonios de mis clientes</h3>
     <!-- Carousel -->
     <div id="testimonios-carousel" class="carousel carousel-dark slide">
+      
       <div class="carousel-inner">
         <div class="carousel-item active">
           <div class="container">
@@ -234,6 +236,7 @@
             </div>
           </div>
         </div>
+
         <div class="carousel-item">
           <div class="container">
             <img class="testimonio-imagen rounded-circle" src="./images/cliente1.svg" alt="imagen de gino">
@@ -244,6 +247,7 @@
             </div>
           </div>
         </div>
+
         <div class="carousel-item">
           <div class="container">
             <img class="testimonio-imagen rounded-circle" src="./images/cliente1.svg" alt="imagen de gino">
@@ -254,6 +258,7 @@
             </div>
           </div>
         </div>
+
       </div>
       <button class="carousel-control-prev" type="button" data-bs-target="#testimonios-carousel" data-bs-slide="prev">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
