--- a/proyecto/index.html
+++ b/proyecto/index.html
@@ -30,6 +30,7 @@
   <nav class="navbar navbar-expand-md">
     <div class="container-fluid">
       <a class="navbar-brand" href="#"><img src="./images/logo-bootstrap.png" width="50" alt="logo marca"></a>
+      
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar-toggler"
         aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -64,7 +65,7 @@
       <h2>Desarrollo sitios web y escribo artículos sobre programación.</h2>
     </div>
     <div class="hero-inferior">
-      <img class="hero-inferior-imagen img-fluid" src="./images/hero-inferior.svg" alt="">
+      <img class="hero-inferior-imagen img-fluid" src="./images/hero-inferior.svg" alt="imagen hero pc">
     </div>
   </section>
 
